search-view: fixed double border at the end of the list
Also, fixes a small details that the results list is
always expanded.

--- a/data/theme/gtk-styles.css
+++ b/data/theme/gtk-styles.css
@@ -97,6 +97,10 @@ GcalSearchView > GtkViewport {
   background-color: @theme_bg_color;
 }
 
+.search-list {
+  border-bottom: 0px;
+}
+
 .search-list > GtkListBoxRow {
   border-bottom: solid 1px @borders;
 }
